--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -1,6 +1,5 @@
 name: Release
 
-
 on:
   push:
     branches: [ "main" ]
@@ -49,7 +48,6 @@ jobs:
   build:
     needs: versioning
     runs-on: ${{ matrix.os }}
-
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
@@ -66,11 +64,21 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Install dependencies (Ubuntu)
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update || true
-          sudo apt-get install sqlite3 libsqlite3-dev || true
-          sudo apt-get install python3-tk
+          sudo apt-get install -y sqlite3 libsqlite3-dev python3-tk || true
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install Nuitka
+
+      - name: Install dependencies (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew update || true
+          brew install sqlite3 || true
+          # For macOS, you may need to handle tkinter separately if needed
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install Nuitka
