--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.11'  # Updated to use Python 3.11
 
       - name: Install semantic release
         run: pip install python-semantic-release
@@ -48,6 +48,7 @@ jobs:
   build:
     needs: versioning
     runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
         os: [ubuntu-latest]
@@ -62,23 +63,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.11'  # Updated to use Python 3.11
 
-      - name: Install dependencies (Ubuntu)
-        if: runner.os == 'Linux'
+      - name: Install dependencies
         run: |
           sudo apt-get update || true
-          sudo apt-get install -y sqlite3 libsqlite3-dev python3-tk || true
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install Nuitka
-
-      - name: Install dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew update || true
-          brew install sqlite3 || true
-          # For macOS, you may need to handle tkinter separately if needed
+          sudo apt-get install sqlite3 libsqlite3-dev || true
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install Nuitka
