--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -51,7 +51,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - name: Print VERSION
@@ -87,7 +87,7 @@ jobs:
       - name: Upload build log
         uses: actions/upload-artifact@v2
         with:
-          name: build-log
+          name: build-log-${{ matrix.os }}
           path: build.log
 
       - name: List dist directory contents
@@ -114,6 +114,7 @@ jobs:
         with:
           name: linuxwt-ubuntu-latest-${{ needs.versioning.outputs.version }}
           path: linuxwt-ubuntu
+
       - name: Download artifacts (macOS)
         uses: actions/download-artifact@v2
         with:
@@ -143,7 +144,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/main  # Ensure this matches the actual binary name and path
+          asset_path: linuxwt-ubuntu/dist/main  # Ensure this matches the actual binary name and path
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
           asset_content_type: application/octet-stream
 
@@ -153,6 +154,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/main  # Ensure this matches the actual binary name and path
+          asset_path: linuxwt-macos/dist/main  # Ensure this matches the actual binary name and path
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-macos
           asset_content_type: application/octet-stream
