--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -5,6 +5,9 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+permissions:
+  contents: write  # Ensure the GITHUB_TOKEN has write permissions for contents
+
 jobs:
   versioning:
     runs-on: ubuntu-latest
@@ -91,7 +94,9 @@ jobs:
           path: build.log
 
       - name: List dist directory contents
-        run: ls -R dist
+        run: |
+          echo "Contents of dist directory:"
+          ls -R dist
 
       - name: Upload binary to release
         uses: actions/upload-artifact@v2
@@ -144,7 +149,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linuxwt-ubuntu/dist/main # Ensure this matches the actual binary name and path
+          asset_path: linuxwt-ubuntu/dist/main  # Ensure this matches the actual binary name and path
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
           asset_content_type: application/octet-stream
 
@@ -154,6 +159,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linuxwt-macos/dist/main # Ensure this matches the actual binary name and path
+          asset_path: linuxwt-macos/dist/main  # Ensure this matches the actual binary name and path
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-macos
           asset_content_type: application/octet-stream
