--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write  # Ensure the GITHUB_TOKEN has write permissions for contents
+  contents: write
 
 jobs:
   versioning:
@@ -118,13 +118,13 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: linuxwt-ubuntu-latest-${{ needs.versioning.outputs.version }}
-          path: linuxwt-ubuntu
+          path: linuxwt-ubuntu/dist  # Updated path to match the upload location
 
       - name: Download artifacts (macOS)
         uses: actions/download-artifact@v2
         with:
           name: linuxwt-macos-latest-${{ needs.versioning.outputs.version }}
-          path: linuxwt-macos
+          path: linuxwt-macos/dist  # Updated path to match the upload location
 
       - name: List downloaded Linux artifacts
         run: ls -R linuxwt-ubuntu
