--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -75,11 +75,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
-      
+
       - name: Build binary with PyInstaller
         run: |
-          pyinstaller --onefile --name main main.py > build.log 2>&1
+          pyinstaller main.spec > build.log 2>&1
         shell: bash
+
       
       - name: Print PyInstaller build summary
         run: |
