--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -54,7 +54,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
 
     steps:
       - name: Print VERSION
