--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -54,7 +54,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - name: Print VERSION
@@ -78,9 +78,8 @@ jobs:
 
       - name: Build binary with PyInstaller
         run: |
-          pyinstaller main.spec > build.log 2>&1
+          pyinstaller --onefile --name linuxwt-${{ matrix.os }}-${{ needs.versioning.outputs.version }} main.py > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
         shell: bash
-
       
       - name: Print PyInstaller build summary
         run: |
@@ -88,6 +87,12 @@ jobs:
           tail -n 100 build.log
         shell: bash
       
+      - name: List dist directory contents
+        run: |
+          echo "Contents of dist directory:"
+          ls -R dist
+        shell: bash
+
       - name: Upload build log
         uses: actions/upload-artifact@v2
         with:
@@ -99,11 +104,6 @@ jobs:
         with:
           name: linuxwt-${{ matrix.os }}-${{ needs.versioning.outputs.version }}
           path: dist/*
-
-      - name: List dist directory contents
-        run: |
-          echo "Contents of dist directory:"
-          ls -R dist
 
   release:
     needs: [build, versioning]
@@ -119,13 +119,13 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: linuxwt-ubuntu-latest-${{ needs.versioning.outputs.version }}
-          path: linuxwt-ubuntu/dist  # Updated path to match the upload location
+          path: linuxwt-ubuntu
 
       - name: Download artifacts (macOS)
         uses: actions/download-artifact@v2
         with:
           name: linuxwt-macos-latest-${{ needs.versioning.outputs.version }}
-          path: linuxwt-macos/dist  # Updated path to match the upload location
+          path: linuxwt-macos
 
       - name: List downloaded Linux artifacts
         run: ls -R linuxwt-ubuntu
@@ -150,7 +150,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linuxwt-ubuntu/dist/main  # Ensure this matches the actual binary name and path
+          asset_path: linuxwt-ubuntu/dist/linuxwt-ubuntu-${{ needs.versioning.outputs.version }}
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
           asset_content_type: application/octet-stream
 
@@ -160,6 +160,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linuxwt-macos/dist/main  # Ensure this matches the actual binary name and path
+          asset_path: linuxwt-macos/dist/linuxwt-macos-${{ needs.versioning.outputs.version }}
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-macos
           asset_content_type: application/octet-stream
