feat(Update): versioning.yml

--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: Build binary with PyInstaller
         run: |
-          pyinstaller --onefile --name main --hidden-import ui main.py > build.log 2>&1
+          pyinstaller main.spec > build.log 2>&1
         shell: bash
 
       - name: Print PyInstaller build summary
