--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -76,20 +76,27 @@ jobs:
           pip install -r requirements.txt
           pip install pyinstaller
   
-      - name: Locate libpython
-        id: locate-libpython
-        run: |
-          LIBPYTHON=$(find /usr -name "libpython3.9.so.1.0" | head -n 1)
-          echo "LIBPYTHON=$LIBPYTHON"
-          echo "::set-output name=libpython::$LIBPYTHON"
-  
-      - name: Update main.spec with libpython path
-        run: |
-          sed -i "s|('/usr/lib/x86_64-linux-gnu/libpython3.9.so.1.0', '.')|('${{ steps.locate-libpython.outputs.libpython }}', '.')|" main.spec
-  
       - name: Build binary with PyInstaller
         run: |
-          pyinstaller --onefile --name main main.py > build.log 2>&1
+          pyinstaller --onefile --name linuxwt-${{ matrix.os }}-${{ needs.versioning.outputs.version }} main.py \
+          --add-data "ui:ui" \
+          --add-data "ansible_utils:ansible_utils" \
+          --add-data "db:db" \
+          --hidden-import "ui" \
+          --hidden-import "ansible_utils" \
+          --hidden-import "db" \
+          --hidden-import "rich" \
+          --hidden-import "sqlite3" \
+          --hidden-import "customtkinter" \
+          --hidden-import "ansible" \
+          --hidden-import "ansible.inventory.manager" \
+          --hidden-import "ansible.parsing.dataloader" \
+          --hidden-import "ansible.vars.manager" \
+          --hidden-import "ansible.playbook.play" \
+          --hidden-import "ansible.executor.task_queue_manager" \
+          --hidden-import "ansible.module_utils.common.collections" \
+          --hidden-import "ansible.utils.display" \
+          --hidden-import "ansible.plugins.callback" > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
         shell: bash
   
       - name: Print PyInstaller build summary
@@ -131,17 +138,8 @@ jobs:
           name: linuxwt-ubuntu-latest-${{ needs.versioning.outputs.version }}
           path: linuxwt-ubuntu/dist  # Updated path to match the upload location
 
-      # - name: Download artifacts (macOS)
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: linuxwt-macos-latest-${{ needs.versioning.outputs.version }}
-      #     path: linuxwt-macos/dist  # Updated path to match the upload location
-
       - name: List downloaded Linux artifacts
         run: ls -R linuxwt-ubuntu
-
-      # - name: List downloaded macOS artifacts
-      #   run: ls -R linuxwt-macos
 
       - name: Create Release
         id: create_release
@@ -160,17 +158,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          #asset_path: linuxwt-ubuntu/dist/main/main  # Ensure this matches the actual binary name and path
-          asset_path: linuxwt-ubuntu/dist/main  # Ensure this matches the actual binary name and path
+          asset_path: linuxwt-ubuntu/dist/linuxwt-${{ matrix.os }}-${{ needs.versioning.outputs.version }}  # Ensure this matches the actual binary name and path
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
           asset_content_type: application/octet-stream
-
-      # - name: Upload MacOS Binary
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: linuxwt-macos/dist/main/main  # Ensure this matches the actual binary name and path
-      #     asset_name: linuxwt-${{ needs.versioning.outputs.version }}-macos
-      #     asset_content_type: application/octet-stream
