--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -78,7 +78,7 @@ jobs:
   
       - name: Build binary with PyInstaller
         run: |
-          pyinstaller --onefile --name linuxwt-${{ matrix.os }}-${{ needs.versioning.outputs.version }} main.py \
+          pyinstaller --onefile --name linuxwt-${{ needs.versioning.outputs.version }} main.py \
           --add-data "ui:ui" \
           --add-data "ansible_utils:ansible_utils" \
           --add-data "db:db" \
@@ -114,7 +114,7 @@ jobs:
       - name: Upload binary to release
         uses: actions/upload-artifact@v2
         with:
-          name: linuxwt-${{ matrix.os }}-${{ needs.versioning.outputs.version }}
+          name: linuxwt-${{ needs.versioning.outputs.version }}
           path: dist/*
   
       - name: List dist directory contents
@@ -158,6 +158,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linuxwt-ubuntu/dist/linuxwt-${{ matrix.os }}-${{ needs.versioning.outputs.version }}  # Ensure this matches the actual binary name and path
+          asset_path: linuxwt-ubuntu/dist/linuxwt-${{ needs.versioning.outputs.version }}  # Ensure this matches the actual binary name and path
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
           asset_content_type: application/octet-stream
