--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -118,6 +118,7 @@ jobs:
           --hidden-import "ansible.executor.task_queue_manager" \
           --hidden-import "ansible.module_utils.common.collections" \
           --hidden-import "ansible.utils.display" \
+          --hidden-import "ansible.plugins.inventory" \
           --hidden-import "ansible.plugins.callback" > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
         shell: bash
   
