--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -118,10 +118,28 @@ jobs:
           --hidden-import "ansible.executor.task_queue_manager" \
           --hidden-import "ansible.module_utils.common.collections" \
           --hidden-import "ansible.utils.display" \
+          --hidden-import "ansible.plugins.callback" \
           --hidden-import "ansible.plugins.inventory" \
           --hidden-import "ansible.plugins.cache" \
           --hidden-import "ansible.plugins.loader" \
-          --hidden-import "ansible.plugins.callback" > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
+          --hidden-import "ansible.plugins.filter" \
+          --hidden-import "ansible.plugins.strategy" \
+          --hidden-import "ansible.plugins.action" \
+          --hidden-import "ansible.plugins.lookup" \
+          --hidden-import "ansible.plugins.vars" \
+          --hidden-import "ansible.plugins.connection" \
+          --hidden-import "ansible.plugins.become" \
+          --hidden-import "ansible.plugins.test" \
+          --hidden-import "ansible.plugins.terminal" \
+          --hidden-import "ansible.plugins.httpapi" \
+          --hidden-import "ansible.plugins.netconf" \
+          --hidden-import "ansible.plugins.network" \
+          --hidden-import "ansible.plugins.shell" \
+          --hidden-import "ansible.plugins.text" \
+          --hidden-import "ansible.plugins.loader" \
+          --hidden-import "ansible.module_utils.basic" \
+          --hidden-import "ansible.module_utils.urls" \
+          --log-level=DEBUG > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
         shell: bash
   
       - name: Print PyInstaller build summary
