--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -121,8 +121,7 @@ jobs:
           --hidden-import "ansible.utils.display" \
           --hidden-import "ansible.plugins.callback" \
           --hidden-import "ansible.plugins.inventory" \
-          --hidden-import "ansible.plugins.cache" \
-          --hidden-import "ansible.builtin.jsonfile" \
+          --hidden-import "ansible.builtin.memory" \
           --hidden-import "ansible.plugins.loader" \
           --hidden-import "ansible.plugins.filter" \
           --hidden-import "ansible.plugins.strategy" \
