--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -95,6 +95,12 @@ jobs:
       - name: List Ansible Config Directory
         run: ls -l /opt/hostedtoolcache/Python/3.9.19/x64/lib/python3.9/site-packages/ansible/config
 
+      - name: List Ansible Config Directory 1
+        run: ls -l /opt/hostedtoolcache/Python/3.9.19/x64/lib/python3.9/site-packages/ansible
+
+      - name: List Ansible Config Directory 2
+        run: ls -l /opt/hostedtoolcache/Python/3.9.19/x64/lib/python3.9/site-packages
+
       - name: Build binary with PyInstaller
         env:
           BASE_YML: ${{ env.BASE_YML }}
