--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -75,6 +75,7 @@ jobs:
           sudo apt-get install sqlite3 libsqlite3-dev || true
           python -m pip install --upgrade pip
           python3 -m pip install --user ansible
+          python3 -m pip install --user ansible-base
           pip install -r requirements.txt
           pip install pyinstaller
 
