--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -103,6 +103,10 @@ jobs:
       - name: List Ansible-Base Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages
 
+
+      - name: List Ansible-Base Directory 1
+        run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible_collections
+
       - name: List Ansible-Base Directory 0
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/qweq
 
