--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -116,6 +116,7 @@ jobs:
           --add-data "db:db" \
           --add-data "${BASE_YML}:ansible/config" \
           --add-data "${RUNTIME_YML}:ansible/config" \
+          --add-data "/home/runner/.local/lib/python3.9/site-packages/ansible_collections:ansible_collections" \
           --hidden-import "ui" \
           --hidden-import "ansible_utils" \
           --hidden-import "db" \
