--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -104,13 +104,7 @@ jobs:
 
       - name: Create PyInstaller Spec File
         run: |
-          echo "from PyInstaller.utils.hooks import collect_data_files, copy_metadata" > linuxwt.spec
-          echo "datas = collect_data_files('ansible') + [(\"ui\", \"ui\"), (\"ansible_utils\", \"ansible_utils\"), (\"db\", \"db\"), (\"${{ env.BASE_YML }}\", \"ansible/config\"), (\"${{ env.RUNTIME_YML }}\", \"ansible/config\"), (\"/home/runner/.local/lib/python3.9/site-packages/ansible_collections\", \"ansible_collections\")]" >> linuxwt.spec
-          echo "hiddenimports = [\"ui\", \"ansible_utils\", \"db\", \"rich\", \"sqlite3\", \"customtkinter\", \"ansible\", \"ansible.inventory.manager\", \"ansible.parsing.dataloader\", \"ansible.vars.manager\", \"ansible.playbook.play\", \"ansible.executor.task_queue_manager\", \"ansible.module_utils.common.collections\", \"ansible.utils.display\", \"ansible.plugins.callback\", \"ansible.plugins.inventory\", \"ansible.builtin.memory\", \"ansible.builtin.jsonfile\", \"ansible.netcommon.memory\", \"ansible.plugins.loader\", \"ansible.plugins.filter\", \"ansible.plugins.strategy\", \"ansible.plugins.action\", \"ansible.plugins.lookup\", \"ansible.plugins.vars\", \"ansible.plugins.connection\", \"ansible.plugins.become\", \"ansible.plugins.test\", \"ansible.plugins.terminal\", \"ansible.plugins.httpapi\", \"ansible.plugins.netconf\", \"ansible.plugins.network\", \"ansible.plugins.shell\", \"ansible.plugins.text\", \"ansible.module_utils.basic\", \"ansible.module_utils.urls\"]" >> linuxwt.spec
-          echo "block_cipher = None" >> linuxwt.spec
-          echo "a = Analysis(['main.py'], datas=datas, hiddenimports=hiddenimports, binaries=[], hookspath=[], runtime_hooks=[], excludes=[], cipher=block_cipher)" >> linuxwt.spec
-          echo "pyz = PYZ(a.pure, a.zipped_data, cipher=block_cipher)" >> linuxwt.spec
-          echo "exe = EXE(pyz, a.scripts, [], name='linuxwt-${{ needs.versioning.outputs.version }}', debug=False, bootloader_ignore_signals=False, strip=False, upx=True, console=True)" >> linuxwt.spec
+          python create_spec.py
 
       - name: Build binary with PyInstaller
         run: |
