--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -103,8 +103,7 @@ jobs:
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible_collections
 
       - name: Create PyInstaller Spec File
-        run: |
-          python create_spec.py
+        run: python create_spec.py
 
       - name: Build binary with PyInstaller
         run: |
@@ -148,7 +147,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: linuxwt-${{ needs.versioning.outputs.version }}
-          path: linuxwt-ubuntu/dist  # Updated path to match the upload location
+          path: linuxwt-ubuntu/dist
 
       - name: List downloaded Linux artifacts
         run: ls -R linuxwt-ubuntu
@@ -170,6 +169,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linuxwt-ubuntu/dist/linuxwt-${{ needs.versioning.outputs.version }}  # Ensure this matches the actual binary name and path
+          asset_path: linuxwt-ubuntu/dist/linuxwt  # Update with the correct path and filename
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
           asset_content_type: application/octet-stream
