--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -150,7 +150,7 @@ jobs:
           path: linuxwt-ubuntu/dist
 
       - name: List downloaded Linux artifacts
-        run: ls -R linuxwt-ubuntu
+        run: ls -R linuxwt-ubuntu/dist
 
       - name: Create Release
         id: create_release
@@ -169,6 +169,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linuxwt-ubuntu/dist/linuxwt  # Update with the correct path and filename
+          asset_path: linuxwt-ubuntu/dist/linuxwt  # Update this if the actual binary filename is different
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
           asset_content_type: application/octet-stream
