--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -103,6 +103,8 @@ jobs:
       - name: List Ansible-Collections Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible_collections
 
+      - name: Run ansible-galaxy collection list
+        run: ansible-galaxy collection list
         
       - name: Build binary with PyInstaller
         env:
@@ -116,7 +118,6 @@ jobs:
           --add-data "db:db" \
           --add-data "${BASE_YML}:ansible/config" \
           --add-data "${RUNTIME_YML}:ansible/config" \
-          --add-data "/home/runner/.local/lib/python3.9/site-packages/ansible_collections:ansible_collections" \
           --hidden-import "ui" \
           --hidden-import "ansible_utils" \
           --hidden-import "db" \
